{
    "name": "InputActionsScheme",
    "maps": [
        {
            "name": "Player",
            "id": "f6ae17bf-3c99-4933-beb1-42946bb3f78f",
            "actions": [
                {
                    "name": "Note1",
                    "type": "Button",
                    "id": "a7d9eadb-641e-4ed2-b825-ca6550dbba1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Note2",
                    "type": "Button",
                    "id": "047b6088-53f7-4ed1-996a-9564529957a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Note3",
                    "type": "Button",
                    "id": "f566d696-70ac-4861-abf7-f75615d97294",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Note4",
                    "type": "Button",
                    "id": "29813e53-60ee-4412-8cc8-5cbec10c6dfb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Note5",
                    "type": "Button",
                    "id": "c4f25591-40dd-4edf-ac14-176a9b8d1753",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Note6",
                    "type": "Button",
                    "id": "8dd4df1a-78bf-4e01-ae75-aea0a220cfa0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Note7",
                    "type": "Button",
                    "id": "4f07c293-07cc-4815-973e-b37731a7236d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Note8",
                    "type": "Button",
                    "id": "eafb3579-a2a1-4afe-90c1-95c1cfb9f59b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ApplyCast",
                    "type": "Button",
                    "id": "5dd983f5-f966-4ddc-b69d-7506cc8b37f7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelCast",
                    "type": "Button",
                    "id": "3e9a98df-55b9-46da-adb6-a0b6886f9a1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScreenPosition",
                    "type": "Value",
                    "id": "a03500b2-20c3-4d79-9ea1-831d7a7c6d67",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ca4f319-8347-44de-961b-3e8c16db05df",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Note1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "230b27ae-eafc-4145-9dc2-681011e72b12",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Note2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46583a1d-f2c6-455d-8b19-03064b7be48e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Note3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29311aa0-ed96-4e48-b6e3-7a28452e4c35",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Note4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c01293e-5dfd-4346-bc6e-05ad8e485b43",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Note5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fa8f5b6-483a-4b38-a6bd-7bc9519a53bf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Note6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "365727c4-278c-4008-b80d-96efaca7adc9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Note7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa3f1172-0762-4124-ba6e-3f85bd1034c1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyCast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "169f19b6-f3f4-4a39-84ab-2d89f24390e6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelCast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529beaf5-1e12-4df2-b8f1-8ca067365b31",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d866704-f80d-45ba-a97d-07c64641489e",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Note8",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}